Add GraalVM 25.0.4+ polyglot module opens and align Truffle to 25.3.4.1.
Required for Maven truffle-api/runtime on the JDK module path so benchmarks, tests, and REPLs work on GraalVM 25.0.4.1 without IllegalAccessError.

Co-authored-by: Cursor <cursoragent@cursor.com>