@@ -66,9 +66,7 @@ public class DclClassBytecodeSerializationTest {
             String javaExe = javaExecutable();
             List<String> cmd = new ArrayList<>();
             cmd.add(javaExe);
-            cmd.add("-Xss4m");
-            cmd.add("--enable-native-access=ALL-UNNAMED");
-            cmd.add("--sun-misc-unsafe-memory-access=allow");
+            addChildJvmOpts(cmd);
             cmd.add("-cp");
             cmd.add(System.getProperty("java.class.path"));
             cmd.add(DclClassRoundTripChildMain.class.getName());
@@ -103,5 +101,16 @@ public class DclClassBytecodeSerializationTest {
             return "java";
         }
         return home + File.separator + "bin" + File.separator + "java";
+    }
+
+    /** Same JVM module flags as {@code build.clj} {@code test-jvm-opts}. */
+    private static void addChildJvmOpts(List<String> cmd) {
+        cmd.add("-Xss4m");
+        cmd.add("--enable-native-access=ALL-UNNAMED");
+        cmd.add("--sun-misc-unsafe-memory-access=allow");
+        cmd.add("--add-opens=org.graalvm.polyglot/org.graalvm.polyglot=ALL-UNNAMED");
+        cmd.add("--add-opens=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED");
+        cmd.add("--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED");
+        cmd.add("--add-opens=org.graalvm.sdk/org.graalvm.nativeimage=ALL-UNNAMED");
     }
 }
